# emotion_recognizer

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
recognizer_research/: recognizer_research.ipynb
recognizer_research/.ipynb_checkpoints/: recognizer_research-checkpoint.ipynb
service/: __main__.py  config.py  dostoevsky_recognizer.py  pyproject.toml  recognizer.py
