[tool.poetry]
name = "emotion_recognizer"
version = "0.1.0"
description = ""
authors = ["2281 <askarbin@rambler.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
dostoevsky = "^0.6.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
